--- a/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -22,6 +22,24 @@
                                         No products found.
                                 </div>
                         </div>
+                        
+                        <div class="pagination-container">
+                                <div class="row">
+                                        <div class="col-md-6"></div>
+                                        <div class="col-md-6">
+                                                <div class="row">
+                                                        <div class="col-md-9" style="padding-left: 30%;">
+                                                                <ngb-pagination 
+                                                                        [collectionSize]="theTotalElements"
+                                                                        [(page)]="thePageNumber"
+                                                                        [pageSize]="thePageSize"
+                                                                       (pageChange)="listProducts()">       
+                                                                </ngb-pagination>
+                                                        </div>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
                 </div>
         </div>
 </div>
